--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -58,7 +58,11 @@
     <!-- forget password activity -->
     <color name="fpw_title_bar_bg_color">#EB413D</color>
     <color name="fpw_title_text_color">#FFFFFF</color>
-    
+    <color name="fpw_bg_color">#F6F6F6</color>
+    <color name="fpw_tv_send_color">#FFFFFF</color>
+    <color name="fpw_tv_hint_color">#CCCCCC</color>
+    <color name="fpw_tv_prompt_color">#888888</color>
+    <color name="fpw_tv_prompt_content_color">#AAAAAA</color>
     
     <!-- common action bar -->
     <color name="common_action_content_text_color">#3F3F3F</color>
