--- a/QiuBai/res/layout/cd_activity.xml
+++ b/QiuBai/res/layout/cd_activity.xml
@@ -80,21 +80,23 @@
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:background="#FFFFFF"
+        android:background="@drawable/cd_bottom_bg"
         >
         <RelativeLayout 
+            android:id="@+id/cd_rel_support"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:background="@drawable/common_layout_press_bg"
             >
             
-            <LinearLayout 
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:orientation="horizontal"
                 >
-                <ImageView 
+                <ImageView
                     android:id="@+id/cd_iv_support"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
@@ -125,9 +127,11 @@
         </RelativeLayout>
         
         <RelativeLayout
+            android:id="@+id/cd_rel_tread"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:background="@drawable/common_layout_press_bg"
             >
             
             <LinearLayout 
