--- a/QiuBai/res/layout/fragment_character_detail.xml
+++ b/QiuBai/res/layout/fragment_character_detail.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-    <LinearLayout
+    <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -26,97 +26,116 @@
             android:textColor="@color/fragment_character_black"
             android:textSize="15sp" />
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
-            <ImageView
-                android:id="@+id/fragment_character_detail_support"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/lin_fragment_character_detail_support"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/character_list_other_segments_support" />
+                android:layout_gravity="center|left"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal" >
 
-            <TextView
-                android:id="@+id/fragment_character_detail_support_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/fragment_character_detail_support"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@id/fragment_character_detail_support"
-                android:textColor="@color/fragment_character_black"
-                android:textSize="12sp" />
+                <ImageView
+                    android:id="@+id/fragment_character_detail_support"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:src="@drawable/character_list_other_segments_support" />
 
-            <ImageView
-                android:id="@+id/fragment_character_detail_tread"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/fragment_character_detail_support_text"
-                android:paddingTop="10dp"
-                android:src="@drawable/character_list_other_segments_tread" />
+                <TextView
+                    android:id="@+id/fragment_character_detail_support_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="@color/fragment_character_black"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/fragment_character_detail_tread_text"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/lin_fragment_character_detail_tread"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/fragment_character_detail_support"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@id/fragment_character_detail_tread"
-                android:textColor="@color/fragment_character_black"
-                android:textSize="12sp" />
+                android:layout_gravity="center|left"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal" >
 
-            <ImageView
-                android:id="@+id/fragment_character_detail_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="40dp"
-                android:layout_toRightOf="@id/fragment_character_detail_tread_text"
-                android:paddingTop="5dp"
-                android:src="@drawable/character_list_other_segments_share" />
+                <ImageView
+                    android:id="@+id/fragment_character_detail_tread"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:layout_marginLeft="5dp"
+                    android:src="@drawable/character_list_other_segments_tread" />
 
-            <TextView
-                android:id="@+id/fragment_character_detail_share_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/fragment_character_detail_support"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@id/fragment_character_detail_share"
-                android:text="分享"
-                android:textColor="@color/fragment_character_black"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/fragment_character_detail_tread_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="@color/fragment_character_black"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/fragment_character_detail_follow"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/lin_fragment_character_detail_share"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/fragment_character_detail_support"
-                android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="5dp"
-                android:text="跟帖"
-                android:textColor="@color/fragment_character_black"
-                android:textSize="12sp" />
+                android:layout_gravity="center|right"
+                android:layout_weight="1"
+                android:gravity="center|right"
+                android:orientation="horizontal" >
 
-            <TextView
-                android:id="@+id/fragment_character_detail_follow_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/fragment_character_detail_support"
-                android:layout_centerInParent="true"
-                android:layout_marginRight="2dp"
-                android:layout_toLeftOf="@id/fragment_character_detail_follow"
-                android:textColor="@color/fragment_character_black"
-                android:textSize="12sp" />
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/fragment_character_detail_share"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:src="@drawable/character_list_other_segments_share" />
+
+                <TextView
+                    android:id="@+id/fragment_character_detail_share_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="分享"
+                    android:textColor="@color/fragment_character_black"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/lin_fragment_character_detail_follow"
+                android:layout_width="0dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center|right"
+                android:layout_weight="1"
+                android:gravity="center|right"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/fragment_character_detail_follow_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/fragment_character_black"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="2dp"
+                    android:text="跟帖"
+                    android:textColor="@color/fragment_character_black"
+                    android:textSize="12sp" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
