--- a/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
+++ b/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
@@ -15,7 +15,7 @@
             android:layout_height="40dp"
             android:layout_centerInParent="true" >
 
-            <RelativeLayout
+            <!-- <RelativeLayout
                 android:layout_width="40dp"
                 android:layout_height="40dp" >
 
@@ -35,6 +35,31 @@
                     android:layout_height="35dp"
                     android:layout_centerInParent="true"
                     android:src="@drawable/common_refresh_listview_clock" />
+            </RelativeLayout>
+            
+            <RelativeLayout 
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                >
+                <ImageView
+                    android:id="@+id/crl_hour"
+                    android:layout_height="35dp"
+                    android:layout_width="35dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/common_refresh_listview_line_hour"
+                    />
+            </RelativeLayout> -->
+            
+            <RelativeLayout 
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                >
+                <ImageView 
+                    android:id="@+id/crl_min"
+                    android:layout_height="35dp"
+                    android:layout_width="35dp"
+                    android:layout_centerInParent="true"
+                    />
             </RelativeLayout>
         </FrameLayout>
     </RelativeLayout>
