--- a/QiuBai/res/layout/common_refresh_listview_footer.xml
+++ b/QiuBai/res/layout/common_refresh_listview_footer.xml
@@ -2,28 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@null"
-    >
-    
-    <LinearLayout 
-        android:layout_height="60dp"
+    android:orientation="vertical" >
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        >
-        
-        <TextView 
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp" >
+
+        <TextView
             android:id="@+id/comment_listview_footer_loading"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:textSize="14sp"
-            android:textColor="#999999"
             android:text="数据加载中"
-            />
-        
+            android:textColor="#999999"
+            android:textSize="14sp" />
     </LinearLayout>
 
 </LinearLayout>
