--- a/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
+++ b/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/crl_header_hidden"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
     android:background="@null"
     android:orientation="vertical" >
 
@@ -11,13 +12,13 @@
         android:layout_marginTop="15dp" >
 
         <FrameLayout
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_centerInParent="true" >
 
-            <!-- <RelativeLayout
-                android:layout_width="40dp"
-                android:layout_height="40dp" >
+            <RelativeLayout
+                android:layout_width="100dp"
+                android:layout_height="100dp" >
 
                 <ImageView
                     android:layout_width="30dp"
@@ -27,8 +28,8 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="40dp"
-                android:layout_height="40dp" >
+                android:layout_width="100dp"
+                android:layout_height="100dp" >
 
                 <ImageView
                     android:layout_width="35dp"
@@ -38,26 +39,25 @@
             </RelativeLayout>
             
             <RelativeLayout 
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 >
                 <ImageView
                     android:id="@+id/crl_hour"
-                    android:layout_height="35dp"
-                    android:layout_width="35dp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/common_refresh_listview_line_hour"
                     />
-            </RelativeLayout> -->
+            </RelativeLayout>
             
             <RelativeLayout 
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 >
                 <ImageView 
                     android:id="@+id/crl_min"
-                    android:layout_height="35dp"
-                    android:layout_width="35dp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
                     android:layout_centerInParent="true"
                     />
             </RelativeLayout>
