--- a/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
+++ b/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
@@ -2,34 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/crl_header_hidden"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="match_parent"
     android:background="@null"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp" >
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp" >
 
         <FrameLayout
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerInParent="true" >
 
             <RelativeLayout
-                android:layout_width="100dp"
-                android:layout_height="100dp" >
+                android:layout_width="50dp"
+                android:layout_height="50dp" >
 
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/common_refresh_listview_disk" />
+                    android:id="@+id/crl_clock_bg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true" />
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="100dp"
-                android:layout_height="100dp" >
+                android:layout_width="50dp"
+                android:layout_height="50dp" >
 
                 <ImageView
                     android:layout_width="35dp"
@@ -39,8 +39,8 @@
             </RelativeLayout>
             
             <RelativeLayout 
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 >
                 <ImageView
                     android:id="@+id/crl_hour"
@@ -51,8 +51,8 @@
             </RelativeLayout>
             
             <RelativeLayout 
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 >
                 <ImageView 
                     android:id="@+id/crl_min"
