--- a/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
+++ b/QiuBai/res/layout/common_refresh_listview_header_hidden.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/crl_header_hidden"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null"
-    android:orientation="vertical" >
+    android:layout_height="75dp"
+    android:background="@null">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -66,16 +65,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="20dp" >
+        android:layout_height="20dp"
+        android:layout_marginTop="55dp" >
 
         <TextView
-            android:id="@+id/comment_listview_footer_loading"
+            android:id="@+id/crL_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="which time update"
             android:textColor="#999999"
             android:textSize="14sp" />
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
