--- a/QiuBai/res/layout/comment_activity.xml
+++ b/QiuBai/res/layout/comment_activity.xml
@@ -9,14 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/comment_rel_fd_bg_color"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="10dp" 
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:background="@color/comment_rel_fd_bg_color"
-        >
+        android:paddingTop="10dp" >
 
         <EditText
             android:id="@+id/comment_edittext_comment"
@@ -33,13 +32,13 @@
 
         <TextView
             android:id="@+id/comment_send"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="发送"
             android:textColor="@color/comment_send_disable_text_color"
-            android:text="发送" />
+            android:textSize="16sp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -49,10 +48,8 @@
         android:layout_above="@id/comment_lin_edit"
         android:visibility="invisible" >
 
-        <include 
-            layout="@layout/common_refresh_listview_header_hidden"
-            />
-        
+        <include layout="@layout/common_refresh_listview_header_hidden" />
+
         <com.qiubai.view.CommonRefreshListView
             android:id="@+id/comment_listview"
             android:layout_width="match_parent"
@@ -61,12 +58,25 @@
         </com.qiubai.view.CommonRefreshListView>
     </RelativeLayout>
 
-	<RelativeLayout
-        android:layout_above="@id/comment_lin_edit"
+    <RelativeLayout
+        android:id="@+id/comment_rel_no_comment"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_alignParentTop="true"
+        android:visibility="invisible" >
+
+        <TextView
+            android:id="@+id/comment_tv_no_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:background="@drawable/comment_reply_fade"
-        >   
+        android:layout_above="@id/comment_lin_edit"
+        android:background="@drawable/comment_reply_fade" >
     </RelativeLayout>
 
 </RelativeLayout>
