--- a/QiuBai/res/layout/common_refresh_listview_footer.xml
+++ b/QiuBai/res/layout/common_refresh_listview_footer.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="数据加载中"
+            android:text="更多数据加载中"
             android:textColor="#999999"
             android:textSize="14sp" />
     </LinearLayout>
