--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -68,7 +68,7 @@
     
     <!-- Forget Password Activity -->
     
-    <!-- Custom MainTitleBarStyle -->
+    <!-- Main Activity -->
     <style name="MainTitleBarStyle" parent="AppBaseTheme">
         <item name="android:windowTitleSize">45dp</item>
         <item name="android:windowTitleBackgroundStyle">@style/MainCustomWindowTitleBackground</item>
@@ -82,6 +82,11 @@
         <item name="android:background">@drawable/main_title_bar_bg</item>
     </style>
 
+    <style name="MainPersonDialogAnimationStyle" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/in_from_right</item>
+        <item name="android:windowExitAnimation">@anim/out_to_right</item>
+    </style>
+    
     <style name="MyWidget.TabPageIndicator" parent="Widget">
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/vpi__tab_indicator</item>
