--- a/QiuBai/res/layout/main_activity.xml
+++ b/QiuBai/res/layout/main_activity.xml
@@ -3,17 +3,65 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <include layout="@layout/main_title_bar" />
-    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="热门" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="文字" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="图片" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </android.support.v4.view.ViewPager>
+
+    <!--
     <com.viewpagerindicator.TabPageIndicator
         android:id="@+id/main_indicator"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/cd_title_bar_bg"
          >
-         <!-- android:background="@android:color/transparent" -->
-    </com.viewpagerindicator.TabPageIndicator>
+    </com.viewpagerindicator.TabPageIndicator> -->
 
+
+    <!--
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -23,7 +71,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/main_tab_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </FrameLayout>
+            android:layout_height="match_parent" /> 
+    </FrameLayout>-->
 
 </LinearLayout>
