--- a/QiuBai/res/layout/main_activity.xml
+++ b/QiuBai/res/layout/main_activity.xml
@@ -1,85 +1,104 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:background="@color/main_viewpager_title_bg_color"
-        android:orientation="horizontal" >
-
-        <RelativeLayout
-            android:id="@+id/main_viewpager_title_rel_hot"
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_weight="1" >
-
-            <TextView
-                android:id="@+id/main_viewpager_title_tv_hot"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="热门"
-                android:textColor="#AAAAAA"
-                android:textSize="15sp" />
-
-            <ImageView
-                android:id="@+id/main_viewpager_title_iv_hot"
-                android:layout_width="match_parent"
-                android:layout_height="2.5dp"
-                android:layout_alignParentBottom="true" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/main_viewpager_title_rel_character"
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_weight="1" >
-
-            <TextView
-                android:id="@+id/main_viewpager_title_tv_character"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="文字"
-                android:textColor="#AAAAAA"
-                android:textSize="15sp" />
-
-            <ImageView
-                android:id="@+id/main_viewpager_title_iv_character"
-                android:layout_width="match_parent"
-                android:layout_height="2.5dp"
-                android:layout_alignParentBottom="true" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/main_viewpager_title_rel_picture"
-            android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_weight="1" >
-
-            <TextView
-                android:id="@+id/main_viewpager_title_tv_picture"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="图片"
-                android:textColor="#AAAAAA"
-                android:textSize="15sp" />
-
-            <ImageView
-                android:id="@+id/main_viewpager_title_iv_picture"
-                android:layout_width="match_parent"
-                android:layout_height="2.5dp"
-                android:layout_alignParentBottom="true" />
-        </RelativeLayout>
-    </LinearLayout>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/main_viewpager"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-    </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:background="@color/main_viewpager_title_bg_color"
+            android:orientation="horizontal" >
+
+            <RelativeLayout
+                android:id="@+id/main_viewpager_title_rel_hot"
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:layout_weight="1" >
+
+                <TextView
+                    android:id="@+id/main_viewpager_title_tv_hot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="热门"
+                    android:textColor="#AAAAAA"
+                    android:textSize="15sp" />
+
+                <ImageView
+                    android:id="@+id/main_viewpager_title_iv_hot"
+                    android:layout_width="match_parent"
+                    android:layout_height="2.5dp"
+                    android:layout_alignParentBottom="true" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/main_viewpager_title_rel_character"
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:layout_weight="1" >
+
+                <TextView
+                    android:id="@+id/main_viewpager_title_tv_character"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="文字"
+                    android:textColor="#AAAAAA"
+                    android:textSize="15sp" />
+
+                <ImageView
+                    android:id="@+id/main_viewpager_title_iv_character"
+                    android:layout_width="match_parent"
+                    android:layout_height="2.5dp"
+                    android:layout_alignParentBottom="true" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/main_viewpager_title_rel_picture"
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:layout_weight="1" >
+
+                <TextView
+                    android:id="@+id/main_viewpager_title_tv_picture"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="图片"
+                    android:textColor="#AAAAAA"
+                    android:textSize="15sp" />
+
+                <ImageView
+                    android:id="@+id/main_viewpager_title_iv_picture"
+                    android:layout_width="match_parent"
+                    android:layout_height="2.5dp"
+                    android:layout_alignParentBottom="true" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/main_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="35dp" >
+        </android.support.v4.view.ViewPager>
+    </FrameLayout>
+
+    <RelativeLayout 
+        android:id="@+id/main_drawer_right"
+        android:layout_width="220dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="这是右边栏"
+            android:textColor="@android:color/white"
+            android:textSize="24sp" />
+    </RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
