--- a/QiuBai/res/layout/weather_main.xml
+++ b/QiuBai/res/layout/weather_main.xml
@@ -49,6 +49,7 @@
                 android:textSize="15sp" />
 
             <TextView
+                android:id="@+id/weather_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
