--- a/QiuBai/res/layout/weather_main.xml
+++ b/QiuBai/res/layout/weather_main.xml
@@ -15,12 +15,12 @@
 
         <ImageView
             android:id="@+id/img_weather"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
-            android:scaleType="center"
-            android:src="@drawable/comment_test" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/day00" />
 
         <TextView
             android:id="@+id/text_weather_degree"
